--- a/AppFinanceiroEF/Telas/Investimento_UC.xaml
+++ b/AppFinanceiroEF/Telas/Investimento_UC.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="AppFinanceiroEF.Telas.CentralDeDados_UC"
+﻿<UserControl x:Class="AppFinanceiroEF.Telas.Investimento_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:AppFinanceiroEF.Telas"
              mc:Ignorable="d" xml:lang="pt-BR" d:DesignHeight="800" Width="1490">
 
     <!--| Grid Principal |-->
@@ -17,11 +18,11 @@
         <Grid x:Name="GridSuperior" Background="#FFF4F5FB" Grid.RowSpan="2">
 
             <!--| Imagem de Fundo |-->
-            <Image Height="290" Margin="5,5,5,0" Source="/Imagens/Cachoeira.jpg" Stretch="Fill"/>
+            <Image Height="290" Margin="5,5,5,0" Source="/Imagens/Universo01.jpg" Stretch="Fill"/>
 
             <!--| Título da Grid Superior |-->
-            <TextBlock Text="Gerenciar Controle Financeiro Pessoal" FontSize="40" Foreground="#FF02FDFD" Width="716"
-                       Margin="144,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50"/>
+            <TextBlock Text="Gerenciar Investimentos" FontSize="40" Foreground="#FF02FDFD" Width="434"
+                   Margin="500,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50"/>
 
             <!--| Rótulos(Label) |-->
             <Label Content="Código" Style="{DynamicResource LabelTransparente}" Margin="15,65,0,0"/>
@@ -33,8 +34,6 @@
             <Label Content="Mês" Style="{DynamicResource LabelTransparente}" Margin="555,65,0,0"/>
 
             <Label Content="Ano" Style="{DynamicResource LabelTransparente}" Margin="720,65,0,0"/>
-
-            <Label Content="Nome de Filtros" Style="{DynamicResource LabelTransparente}" Margin="865,10,0,0" Height="25"/>
 
             <Label Content="Categorias" Style="{DynamicResource LabelTransparente}" Margin="865,75,0,0"/>
 
@@ -59,13 +58,10 @@
             <ComboBox x:Name="CbxMes" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="555,90,0,0" Width="155"/>
 
             <ComboBox x:Name="CbxAno" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="720,90,0,0"
-                       MouseLeave="CbxAno_MouseLeave" Width="120"/>
-
-            <ComboBox Name="CbxNomeDeFiltros" Width="200" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="870,35,0,0" 
-                      SelectionChanged="CbxNomeDeFiltros_SelectionChanged" MouseLeave="CbxNomeDeFiltros_MouseLeave"/>
+                   MouseLeave="CbxAno_MouseLeave" Width="120"/>
 
             <ComboBox Name="CbxCategoria" Width="320" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="870,100,0,0" 
-                      SelectionChanged="CbxCategoria_SelectionChanged"/>
+                  SelectionChanged="CbxCategoria_SelectionChanged"/>
 
             <ComboBox Name="CbxSubCategoria" Width="390" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="870,160,0,0"/>
 
@@ -73,7 +69,7 @@
             <TextBox x:Name="TxtId" Width="85" Style="{DynamicResource TxtBrancoEBordaAzul}" Margin="20,90,0,0" IsReadOnly="True"/>
 
             <TextBox x:Name="TxtValor" Width="150" Style="{DynamicResource TxtBrancoEBordaAzul}" Margin="20,160,0,0" 
-                     KeyDown="TxtValor_KeyDown"/>
+                 KeyDown="TxtValor_KeyDown"/>
 
             <TextBox x:Name="TxtCarteira" Text="R$ 0,00" Width="150" Style="{DynamicResource TextBoxVerde}" Margin="1110,35,0,0"/>
 
@@ -86,28 +82,28 @@
 
             <!--| Botões |-->
             <Button x:Name="BtnCadastrar" Content="Cadastrar" Style="{StaticResource BtnAzulEscuroEAzulClaro}" Margin="190,150,0,0" 
-                    Click="BtnCadastrar_Click" Width="150"/>
+                Click="BtnCadastrar_Click" Width="150"/>
 
             <Button x:Name="BtnAlterar" Content="Alterar" Style="{StaticResource BtnAzulEscuroEAzulClaro}" Margin="360,150,0,0"  
-                     Click="BtnAlterar_Click" Width="150" />
+                 Click="BtnAlterar_Click" Width="150" />
 
             <Button x:Name="BtnExcluir" Content="Excluir" Style="{StaticResource BtnAzulEscuroEAzulClaro}" Margin="530,150,0,0" 
-                    Click="BtnExcluir_Click" Width="150"/>
+                Click="BtnExcluir_Click" Width="150"/>
 
             <Button x:Name="BtnAtualizar" Content="Atualizar" Style="{StaticResource BtnAzulEscuroEAzulClaro}" Margin="700,150,0,0" 
-                    Click="BtnAtualizar_Click" Width="150" />
+                Click="BtnAtualizar_Click" Width="150" />
         </Grid>
 
         <!--| Grid Inferior |-->
         <Grid x:Name="GridInferior" Grid.Row="2" Background="#FFFCFFFF">
 
             <!--| Título - Data Grid de Valores |-->
-            <Label Name="LblTituloDtgValores" Content="Despesa Geral - Mensal e Anual" Margin="5,0,5,0" OpacityMask="#FF0C01F5" Foreground="#FF06F0F0" 
-            FontWeight="Bold" FontSize="18" Background="#FF09320F" Padding="550,0,0,0" Height="30" VerticalAlignment="Top"/>
+            <Label Name="LblTituloDtgValores" Content="Saldo de Investimentos - Mensal e Anual" Margin="5,0,5,0" OpacityMask="#FF0C01F5" Foreground="#FF06F0F0" 
+        FontWeight="Bold" FontSize="18" Background="#FF09320F" Padding="550,0,0,0" Height="30" VerticalAlignment="Top"/>
 
             <!--| Data Grid de Valores |-->
             <DataGrid x:Name="DtgValores" Height="90" Style="{DynamicResource DtgDeValoresCorVerde}" Margin="5,30,5,0"
-                      HorizontalAlignment="Stretch" ColumnHeaderStyle="{DynamicResource DtgCabecalhoVerdeEscuro}">
+                  HorizontalAlignment="Stretch" ColumnHeaderStyle="{DynamicResource DtgCabecalhoVerdeEscuro}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="  Janeiro" Binding="{Binding Janeiro, StringFormat=R$ \{0:N2\}}" Width="113"/>
                     <DataGridTextColumn Header="Fevereiro" Binding="{Binding Fevereiro, StringFormat=R$ \{0:N2\}}" Width="113"/>
@@ -128,7 +124,7 @@
 
             <!--| Data Grid de Dados |-->
             <DataGrid x:Name="DtgDados" Style="{DynamicResource DtgDadosCorDaLinhaBisqueWhite}" Margin="5,90,5,2"
-                  ColumnHeaderStyle="{DynamicResource DtgCabecalhoGradienteAzul}" MouseDoubleClick="DtgDados_MouseDoubleClick">
+              ColumnHeaderStyle="{DynamicResource DtgCabecalhoGradienteAzul}" MouseDoubleClick="DtgDados_MouseDoubleClick">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Código" Binding="{Binding Id, StringFormat=\{0:D4\}}" Width="100"/>
                     <DataGridTextColumn Header="Nome da Categoria" Binding="{Binding NomeDaCategoria}" Width="250"/>
