--- a/AppFinanceiroEF/Telas/Receita_UC.xaml
+++ b/AppFinanceiroEF/Telas/Receita_UC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AppFinanceiroEF.Telas.Poupanca_UC"
+﻿<UserControl x:Class="AppFinanceiroEF.Telas.Receita_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -21,8 +21,8 @@
             <Image Height="290" Margin="5,5,5,0" Source="/Imagens/Universo01.jpg" Stretch="Fill"/>
 
             <!--| Título da Grid Superior |-->
-            <TextBlock Text="Gerenciar Poupança" FontSize="40" Foreground="#FF02FDFD" Width="401"
-                   Margin="500,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50"/>
+            <TextBlock Text="GerenciarReceitas" FontSize="40" Foreground="#FF02FDFD" Width="366"
+                   Margin="550,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50"/>
 
             <!--| Rótulos(Label) |-->
             <Label Content="Código" Style="{DynamicResource LabelTransparente}" Margin="15,65,0,0"/>
@@ -98,7 +98,7 @@
         <Grid x:Name="GridInferior" Grid.Row="2" Background="#FFFCFFFF">
 
             <!--| Título - Data Grid de Valores |-->
-            <Label Name="LblTituloDtgValores" Content="Saldo da Poupança - Mensal e Anual" Margin="5,0,5,0" OpacityMask="#FF0C01F5" Foreground="#FF06F0F0" 
+            <Label Name="LblTituloDtgValores" Content="Benefícios do INSS - Mensal e Anual" Margin="5,0,5,0" OpacityMask="#FF0C01F5" Foreground="#FF06F0F0" 
         FontWeight="Bold" FontSize="18" Background="#FF09320F" Padding="550,0,0,0" Height="30" VerticalAlignment="Top"/>
 
             <!--| Data Grid de Valores |-->
