--- a/AppFinanceiroEF/Telas/SubCategorias/SubCategoriaConsultarDespesa_Uc.xaml
+++ b/AppFinanceiroEF/Telas/SubCategorias/SubCategoriaConsultarDespesa_Uc.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="AppFinanceiroEF.Telas.SubCategoria_UC"
+﻿<UserControl x:Class="AppFinanceiroEF.Telas.SubCategorias.SubCategoriaConsultarDespesa_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:AppFinanceiroEF.Telas.SubCategorias"
              mc:Ignorable="d" xml:lang="pt-BR" d:DesignHeight="800" d:DesignWidth="1300">
 
     <!--| Grid Principal |-->
@@ -30,8 +31,8 @@
                     Height="22" Width="398" Margin="80,18,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
                     <!--| TeextBlock |-->
-                    <TextBlock Text="SubCategorias" FontSize="36" FontWeight="Bold" Foreground="#FFF7F7F7" Margin="500,0,0,0" 
-                               HorizontalAlignment="Left" VerticalAlignment="Top" Width="250" Height="45"/>
+                    <TextBlock Text="SubCategorias de Consultar Despesas" FontSize="36" FontWeight="Bold" Foreground="#FFF7F7F7" Margin="500,0,0,0" 
+                               HorizontalAlignment="Left" VerticalAlignment="Top" Width="750" Height="45"/>
 
                     <!--| Borda Interna de Cadastrar, Alterar e Excluir |-->
                     <Border Background="#FF0BCEF3" BorderBrush="#FFF1F306" BorderThickness="5" Height="170" Margin="10,0,0,65" 
@@ -41,8 +42,8 @@
                         <Grid Background="#FF0BCEF3" Width="1205" Margin="20,0,0,10" HorizontalAlignment="Left" Height="145" VerticalAlignment="Bottom">
 
                             <!--| Rótulos(Label) |-->
-                            <Label Content="Cadastrar, Alterar e Excluir SubCategorias" FontSize="20" FontWeight="Bold" Foreground="#FF110AEA" 
-                                   Height="40" Width="400" Margin="285,-10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            <Label Content="Cadastrar, Alterar e Excluir SubCategorias de Despesas" FontSize="20" FontWeight="Bold" Foreground="#FF110AEA" 
+                                   Height="40" Width="523" Margin="285,-10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
                             <Label Content="Código da Categoria" FontSize="16" FontWeight="Bold" Foreground="#FF110AEA" Height="30" Width="165"
                                    Margin="30,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
@@ -50,11 +51,8 @@
                             <Label Content="Código da SubCategoria" FontSize="16" FontWeight="Bold" Foreground="#FF110AEA" Height="30" Width="200"
                                    Margin="0,100,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
 
-                            <Label Content="Filtros" FontSize="16" FontWeight="Bold" Foreground="#FF110AEA" Height="30" Width="70"
-                                   Margin="290,40,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-
                             <Label Content="Nome da Categoria" FontSize="16" FontWeight="Bold" Foreground="#FF110AEA" Height="30" Width="160"
-                                   Margin="565,40,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                   Margin="320,40,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
                             <Label Content="Nome da SubCategoria" FontSize="16" FontWeight="Bold" Foreground="#FF110AEA" Height="30" Width="190"
                                    Margin="290,100,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -70,10 +68,8 @@
                                      Margin="485,100,0,0"/>
 
                             <!--| ComboBox de Categorias |-->
-                            <ComboBox Name="CbxNomeDeFiltros" Height="40" Width="200" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="355,35,0,0"
-                                      SelectionChanged="CbxNomeDeFiltros_SelectionChanged" MouseLeave="CbxNomeDeFiltros_MouseLeave"/>
 
-                            <ComboBox Name="CbxCategoria" Height="40" Width="310" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="720,35,0,0"
+                            <ComboBox Name="CbxCategoria" Height="40" Width="310" Style="{DynamicResource ComboBoxAzulMarinho}" Margin="475,35,0,0"
                                       MouseLeave="CbxCategoria_MouseLeave" SelectedIndex="0"/>
 
                             <!--| Pesquisar SubCategorias|-->
@@ -111,9 +107,7 @@
                   ColumnHeaderStyle="{DynamicResource DtgCabecalhoAmarelo}" IsReadOnly="True" Grid.Row="1"
                   MouseDoubleClick="DtgDados_MouseDoubleClick">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Código" Binding="{Binding FiltroDeControleId, StringFormat=\{0:D4\}}" Width="100"/>
-                <DataGridTextColumn Header="Nome do Filtro" Binding="{Binding NomeDoFiltro}" Width="250"/>
-                <DataGridTextColumn Header="Código" Binding="{Binding CategoriaId, StringFormat=\{0:D4\}}" Width="100"/>
+                <DataGridTextColumn Header="Código" Binding="{Binding CategoriaConsultarDespesaId, StringFormat=\{0:D4\}}" Width="100"/>
                 <DataGridTextColumn Header="Nome da Categoria" Binding="{Binding NomeDaCategoria}" Width="300"/>
                 <DataGridTextColumn Header="Código" Binding="{Binding Id, StringFormat=\{0:D4\}}" Width="100"/>
                 <DataGridTextColumn Header="SubCategoria" Binding="{Binding NomeDaSubCategoria}" Width="400"/>
