--- a/AppFinanceiroEF/Telas/Menus/MenuIniciar.xaml
+++ b/AppFinanceiroEF/Telas/Menus/MenuIniciar.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AppFinanceiroEF.Telas.MenuIniciar.TelaPrincipal"
+﻿<Window x:Class="AppFinanceiroEF.Telas.Menus.MenuIniciar"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
