--- a/AppFinanceiroEF/Telas/Menus/PaginaInicial_UC.xaml
+++ b/AppFinanceiroEF/Telas/Menus/PaginaInicial_UC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AppFinanceiroEF.Telas.PaginaInicial_UC"
+﻿<UserControl x:Class="AppFinanceiroEF.Telas.Menus.PaginaInicial_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
