--- a/AppFinanceiroEF/Telas/Menus/RelatoriosEConsultas_UC.xaml
+++ b/AppFinanceiroEF/Telas/Menus/RelatoriosEConsultas_UC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AppFinanceiroEF.Telas.RelatoriosEConsultas_UC"
+﻿<UserControl x:Class="AppFinanceiroEF.Telas.Menus.RelatoriosEConsultas_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,35 +9,35 @@
 
         <!--| Titulo das Categorias e SubCategorias |-->
         <TextBlock Text="Controle Financeiro - Relatórios" FontSize="30" Foreground="#DDDDDD" Width="450" 
-               Margin="505,105,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+               Margin="395,120,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <TextBlock Text="Controle Financeiro - Consultas" FontSize="30" Foreground="#DDDDDD" Width="450" 
-               Margin="505,400,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+               Margin="395,450,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!--| Relatórios |-->
-        <RadioButton Content="Relatorio de Despesas" Style="{StaticResource RadionButtonComImagem}" Margin="490,155,0,0"
+        <RadioButton Content="Relatorio de Despesas" Style="{StaticResource RadionButtonComImagem}" Margin="337,170,0,0"
                  Command="{Binding Path=DataContext.ComandoDoRelatorioDeDespesas, RelativeSource={RelativeSource FindAncestor, 
-                 AncestorType={x:Type Window}}}" Width="225"/>
+                 AncestorType={x:Type Window}}}" Width="290" Height="120"/>
 
-        <RadioButton Content="Relatorio da Poupança" Width="225" Style="{StaticResource RadionButtonComImagem}" Margin="720,155,0,0"
+        <RadioButton Content="Relatorio da Poupança" Width="290" Style="{StaticResource RadionButtonComImagem}" Margin="657,170,0,0"
                  Command="{Binding Path=DataContext.ComandoDoRelatorioDaPoupanca, RelativeSource={RelativeSource FindAncestor, 
-                 AncestorType={x:Type Window}}}"/>
+                 AncestorType={x:Type Window}}}" Height="120"/>
 
-        <RadioButton Content="Relatorio de Receitas" Width="225" Style="{StaticResource RadionButtonComImagem}" Margin="490,265,0,0"
+        <RadioButton Content="Relatorio de Receitas" Width="290" Style="{StaticResource RadionButtonComImagem}" Margin="337,313,0,0"
                  Command="{Binding Path=DataContext.ComandoDoRelatorioDeReceitas, RelativeSource={RelativeSource FindAncestor, 
-                 AncestorType={x:Type Window}}}"/>
+                 AncestorType={x:Type Window}}}" Height="120"/>
 
-        <RadioButton Content="Relatorio de Investimentos" Width="225" Style="{StaticResource RadionButtonComImagem}" Margin="720,265,0,0"
+        <RadioButton Content="Relatorio de Investimentos" Width="290" Style="{StaticResource RadionButtonComImagem}" Margin="657,313,0,0"
                  Command="{Binding Path=DataContext.ComandoDoRelatorioDeInvestimentos, RelativeSource={RelativeSource FindAncestor, 
-                 AncestorType={x:Type Window}}}"/>
+                 AncestorType={x:Type Window}}}" Height="120"/>
 
         <!--| Consultas |-->
-        <RadioButton Content="Consultar Despesas" Width="225" Style="{StaticResource RadionButtonComImagem}" Margin="490,450,0,0"
+        <RadioButton Content="Consultar Despesas" Width="290" Style="{StaticResource RadionButtonComImagem}" Margin="337,503,0,0"
                  Command="{Binding DataContext.ComandoDeConsultarDespesas, RelativeSource={RelativeSource FindAncestor, 
-        AncestorType={x:Type Window}}}"/>
+        AncestorType={x:Type Window}}}" Height="120"/>
 
-        <RadioButton Content="Consultar Finanças" Width="225" Style="{StaticResource RadionButtonComImagem}" Margin="720,450,0,0"
+        <RadioButton Content="Consultar Finanças" Width="290" Style="{StaticResource RadionButtonComImagem}" Margin="657,503,0,0"
                  Command="{Binding DataContext.ComandoDeConsultarFinancas, RelativeSource={RelativeSource FindAncestor, 
-                 AncestorType={x:Type Window}}}"/>
+                 AncestorType={x:Type Window}}}" Height="120"/>
     </Grid>
 </UserControl>
